<resources>
    <string name="app_name">Mind Card</string>
    <string name="plans">Планы</string>
    <string name="schedule">Расписание</string>
    <string name="action_settings">Settings</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="short_description">Описание</string>
    <string name="title_error">Пожалуйста придумайте название</string>
    <string name="save">Сохранить?</string>
    <string name="deleteWithQuestion">Удалить?</string>
    <string name="deleteMessage">Внимание! Все вложенные задачи удалятся тоже, Вы уверены ?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="pick_color">Выберите цвет</string>
    <string name="pick_color_select">Выбрать</string>

    <string name="date">Дата</string>
    <string name="due">До</string>
    <string name="from">С</string>
    <string name="time">Время</string>
    <string name="empty_plan_list">А планов то нет</string>
    <string name="empty_task_list">Чего ты ждешь?\nСоздай задачу!</string>
</resources>
