<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarPlanEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/taskTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:errorEnabled="true"
            app:hintTextAppearance="@style/WhiteHint">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="22sp"
                android:theme="@style/WhiteUnderline"
                tools:text="очень длинное тестовое название" />
        </android.support.design.widget.TextInputLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_send"
        app:fabSize="normal"
        app:layout_anchor="@id/appbarPlanEdit"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="@+id/appbarPlanEdit"
        app:layout_constraintEnd_toEndOf="@+id/appbarPlanEdit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarPlanEdit" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:columnCount="2"
        app:layout_constraintTop_toBottomOf="@id/appbarPlanEdit">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_description"/>

        <EditText
            android:id="@+id/taskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            tools:text="description" />

        <View
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/separator_color"/>


        <ImageView
            android:id="@+id/add_from_date_img"
            android:layout_marginEnd="32dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_schedule_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">
                <TextView
                    android:id="@+id/dateFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/date"/>

                <TextView
                    android:id="@+id/timeFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:layout_weight="0.25"
                    android:textColorHint="@color/hint_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dateDue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/date"/>

                <TextView
                    android:id="@+id/timeDue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:layout_weight="0.25"
                    android:textColorHint="@color/hint_color" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/separator_color"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/taskColor"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center_vertical"
            app:backgroundTint="@color/colorPrimary"
            app:elevation="0dp" />

        <LinearLayout
            android:id="@+id/taskColorContainer"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pick_color"
                tools:ignore="RelativeOverlap" />
        </LinearLayout>

        <View
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/separator_color"/>

    </GridLayout>
</android.support.constraint.ConstraintLayout>